Adding day ticker
