# internal/spot/market/router.go
@@ -13,4 +13,5 @@ func RegisterMarketRoutes(app *fiber.App, handler MarketControllerInterface) {
 	marketGroup.Get("/candlestick-data", handler.CheckBinanceCandleStickData) // klines and uiklines
 	marketGroup.Get("/current-average-price", handler.CheckBinanceCurrentAveragePrice)
 	marketGroup.Get("/price-change-24hr", handler.CheckBinancePriceChange24hr)
+	marketGroup.Get("/day-ticker", handler.CheckBinanceTradingDayTicker)
 }
